# gmp

./: ChangeLog  Makefile.am  config.guess  config.sub  configure.ac
cxx/: Makefile.am
mpf/: Makefile.am
mpn/: Makeasm.am  Makefile.am  cpp-ccas  m4-ccas
mpn/x86/: t-zdisp.sh  t-zdisp2.pl
mpq/: Makefile.am
mpz/: Makefile.am  millerrabin.c
printf/: Makefile.am
rand/: Makefile.am
scanf/: Makefile.am
tune/: speed.c  speed.h
