## Process this file with automake to generate Makefile.in

# Copyright 2001, 2002, 2010 Free Software Foundation, Inc.
#



AM_CPPFLAGS = -D__GMP_WITHIN_GMP -I$(top_srcdir)

noinst_LTLIBRARIES = librandom.la

librandom_la_SOURCES = randmt.h						\
  rand.c randclr.c randdef.c randiset.c randlc2s.c randlc2x.c randmt.c	\
  randmts.c rands.c randsd.c randsdui.c randbui.c randmui.c
