## Process this file with automake to generate Makefile.in

# Copyright 2001, 2002 Free Software Foundation, Inc.
#



AM_CPPFLAGS = -D__GMP_WITHIN_GMP -I$(top_srcdir)

noinst_LTLIBRARIES = libscanf.la

libscanf_la_SOURCES = \
  doscan.c fscanf.c fscanffuns.c scanf.c sscanf.c sscanffuns.c \
  vfscanf.c vscanf.c vsscanf.c
